- revert some changes in the TranslationDocumentationProvider as i broke the logic and generated a memory leak - remove some useless code and extract the pattern in a constant to prevent compiling it at each check - give jformdesigner a 30 day trial (removed the the not cool "unregistered message as i simply converted a view" ) - as QA changed name to QC, needed to adapt that - add two tabs for "the move to server warnings" in order to have a better overview for this project. - allow to type an external reviewer or "no review" to prevent being too strict with reviews